manifests/garage-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-webui
  namespace: garage
spec:
  selector:
    app: garage-webui
  ports:
    - port: 80
      targetPort: 3909
